--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2",    
+    "express": "^4.19.2",
+    "express-hbs": "^2.5.0",
     "mercadopago": "^2.0.13"
   }
 }
